Checkpoint update to compiler and dfa